Refactored the models structure. Added cars cards to Android app
